# majin-codes

./: README.md  git-key.sh  git.sh  程序代码编写规范.doc
C&C++/: README.md
C&C++/Makefile模板/: Readme.md
C&C++/c 正则表达式/: README.md  newCPP.cpp
C&C++/matplotlib/: README.md
C&C++/刷题笔记/: 查找.docx
C&C++/功能测试/: README.md
C&C++/功能测试/自测/: README.md  main  main.cpp  test  test.cpp  test.sh
C&C++/日志打印/: README.md
C&C++/日志打印/easylogging(c++)/: README.md  global-configuration.cpp  my.conf
C&C++/日志打印/myTest/: config&muti-logger.cpp  config_muti-logger.cpp
C&C++/日志打印/zlog(c)/: README.md
C&C++/矩阵运算/: README.md
C&C++/编译相关/: README.md
C&C++/编译相关/CMakeList模板/: CMakeLists.txt  README.md
C&C++/编译相关/Makefile模板/: Readme-cn.md  Readme.md
C&C++/网络通信/: README.md
C&C++/键值对数据库/: README.md
command/: README.md
git常用命令/: README.md  openeuler.doc
majin-C_C++/c 正则表达式/: newCPP
majin-C_C++/刷题笔记/: string操作.docx  ~$ring操作.docx  ~$查找.docx
majin-C_C++/回调问题/: newCPP  newCPP.cpp
majin-py/线程&&队列-多线程数据共享问题/: majin.md
majin-py/线程&&队列-多线程数据共享问题/traci_tls/: runner.py
majin-tools/: README.md
majin-ubuntu/UDP/: .testData.txt.swp  clUdpTimeDate  clUdpTimeDate.cpp  readme  seUdpTimeDate.cpp
majin-ubuntu/Ubuntu常见问题/: 删除无用缓存及垃圾文件.md
majin-ubuntu/shell/: find.sh  myshell.sh
python/: README.md
python/Python 正则表达式/: newPY.py
python/matplotlib/: README.md
python/python-shell/: README.md
python/python-shell/tail命令/: README.md  tail.py
python/线程&&队列-多线程数据共享问题/: README.md  muti_thread.py  newPY.py
python/线程&&队列-多线程数据共享问题/traci_tls/: tripinfo.xml
studying/: README.md
tools/: README.md
tools/qt/: README.md
ubuntu/: README.md
ubuntu/UDP/: seUdpTimeDate
ubuntu/Ubuntu常见问题/: 安装依赖相关问题.md
ubuntu/ros/: README.md  majin.md
ubuntu/shell/: README.md
ubuntu/shell/优秀的shell批编译&运行/: build_all.sh  build_run.cpp  compile.sh  run.sh  run_all.sh  untreated.cpp
ubuntu/shell/多终端，多任务/: README.md  gnome-terminal.sh
ubuntu/shell/条件_函数_编译/: build.sh
ubuntu/shell/自测/: README.md
ubuntu/终端操作/: README.md
ubuntu/远程控制/: README.md
(+39 files in other folders)
